--- a/1.htm
+++ b/1.htm
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <button onclick="PrintDeveloperbyMap()">
-      Console log Students with Map
-    </button>
-    <button onclick="PrintDeveloperbyForEach()">
-      Console log Students with foreach
-    </button>
-    <button onclick="addData()">Console New Data with 4th Employee</button>
-    <button onclick="removeAdmin()">Remove Admin</button>
-    <button onclick="concatenateArray()">concatenateArray</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Employee List</title>
+</head>
+<body>
+  <button onclick="PrintDeveloperbyMap()">Console log Students with Map</button>
+  <button onclick="PrintDeveloperbyForEach()">Console log Students with ForEach</button>
+  <button onclick="addData()">Console New Data with 4th Employee</button>
+  <button onclick="removeAdmin()">Remove Admin</button>
+  <button onclick="concatenateArray()">Concatenate Array</button>
 
-    <script src="../zz/script.js"></script> -->
-  </body>
+<script>
+let arr = [
+  { id: 1, name: "john", age: "18", profession: "developer" },
+  { id: 2, name: "jack", age: "20", profession: "developer" },
+  { id: 3, name: "karen", age: "19", profession: "admin" },
+];
 
+function PrintDeveloperbyMap() {
+  arr.map(e => {
+    if (e.profession === 'developer') console.log(e);
+  });
+}
 
+function PrintDeveloperbyForEach() {
+  arr.forEach(e => {
+    if (e.profession === 'developer') console.log(e);
+  });
+}
+
+function addData() {
+  let newEmployee = { id: 4, name: "susan", age: "20", profession: "intern" };
+  arr.push(newEmployee);
+  console.log(arr);
+}
+
+function removeAdmin() {
+  arr = arr.filter(e => e.profession !== "admin");
+  console.log(arr);
+}
+
+function concatenateArray() {
+  let moreEmployees = [
+    { id: 8, name: "Nikky", age: "24", profession: "developer" },
+    { id: 9, name: "Shivam", age: "30", profession: "developer" },
+    { id: 10, name: "Dakahi", age: "77", profession: "developer" },
+  ];
+  arr = arr.concat(moreEmployees);
+  console.log(arr);
+}
+</script>
+</body>
 </html>
